Revision history for Python extension KRISP

$Id$

1.0.2
	* Fri Mar  6 2016 JoungKyun.Kim <http://oops.org>
	- add __version__ constant

	* Thu Mar  5 2016 JoungKyun.Kim <http://oops.org>
	- support detect_handledata_r for binary safe problems (libchardet >= 1.0.5)

1.0.1
	* Thu Apr 27 2011 JoungKyun.Kim <http://oops.org>
	- fixed overflow 32bit address on 64bit system
	- 1.0.1 release

	* Tue Apr 26 2011 JoungKyun.Kim <http://oops.org>
	- start 1.0.1 tree
	- fixed chardet.detect segfault on 64bit system

1.0.0
    * Mon Jul  5 2010 JoungKyun.Kim <http://oops.org>
    - 1.0.0 release
